# ALM

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CMakeLists.txt.conda  README.md  alm.sln
.github/workflows/: build-and-test-ALM-conda.yml  windows-conda.yml
conda/: build.sh  meta.yaml
docs/: Makefile  alm.rst  compile-with-conda-packages.rst  compile-with-makefile.rst  conf.py  formalism.rst  format-dfset.rst  index.rst  input-tags.rst  install.rst  intro.rst  modules.rst  python-module.rst  readthedocs.yaml
etc/: alm-environment.yml
example/: Si_fitting.cpp  Si_fitting.py  Si_fitting2.cpp  Si_fitting2.py  Si_fitting_external.py  Si_fitting_insteps.py  Si_suggest.cpp  Si_suggest.py  Si_suggest2.cpp  Si_suggest2.py  show_fc_dependency.py  sparseQR.py  sparse_Eigen.py  write_fcsxml.py
example/AlN/: AlN-lasso.py  DFSET_AlN.lzma  POSCAR_AlN  README
example/lasso/: LASSO_example.ipynb  LASSO_example.py
include/: alm.h
python/: _alm.c  alm_wrapper.cpp  alm_wrapper.h  pyproject.toml  setup.py
python/alm/: __init__.py  alm.py  fcsxml.py
src/: Makefile.linux  Makefile.osx  Makefile.osx_clang  alamode.cpp  alamode.h  alm.cpp  alm.h  alm.vcxproj  alm.vcxproj.filters  alm_core.cpp  alm_core.h  alm_cui.cpp  alm_cui.h  cluster.cpp  cluster.h  combination.h  constants.h  constraint.cpp  constraint.h  error.cpp  error.h  fcs.cpp  fcs.h  files.cpp  files.h  fitting.cpp  fitting.h  input_parser.cpp  input_parser.h  input_setter.cpp  input_setter.h  interaction.cpp  interaction.h  lasso.cpp  lasso.h  main.cpp  mathfunctions.h  memory.cpp  memory.h  optimize.cpp  (+18 more)
test/: SiC_fitting.py  Si_fitting.py
tools/: README.md
