[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "alm"
version = "1.4.0"
description = "Force constants generator"
authors = [
 {name = "Terumasa Tadano"},
 {email = "terumasa.tadano@gmail.com" }
]
readme = "README.md"
license = { text = "MIT License"}
keywords = ["alm", "numpy", "setuptools"]

[project.urls]
documentation = "https://alm.readthedocs.io"
homepage = "https://github.com/ttadano/ALM"
repository = "https://github.com/ttadano/ALM"

[project.scripts]
alm = "alm:main"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
